k8s/client-cluster-ip-service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service-2
spec:
  type: ClusterIP
  selector:
    component: web2
  ports:
    - port: 3000
      targetPort: 3000
