k8s/multi-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: multi-ip-service
spec:
  type: ClusterIP
  selector:
    component: multi
  ports:
    - port: 8000
      targetPort: 8000
